--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -218,7 +218,7 @@
     }
 
     .content-main-info__item {
-        padding: 0 15px;
+        /*padding: 0 15px;*/
     }
 
     .content-main-info__item h1 {
