--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -1503,6 +1503,7 @@ input.subscribe-sidebar-item__btn.subscribe-sidebar-item__btn--btn-submit {
     min-height: 130px;
     box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.3);
     margin: 0 20px 15px 0;                  /****** исправила ***********************/
+    min-width: 145px;
 }
 .blocks-content-text .content-text-item span {
     color: #000;
