--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -63,6 +63,9 @@
         border-bottom-width: 2px;
         border-bottom-style: solid;
     }
+    #successRating{
+        width: 20% !important;
+    }
 }
 
 
