--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -320,7 +320,7 @@ select{width:100%;max-width:100%;min-width:100%;-webkit-appearance:none;appearan
 
 .save-rating {
     cursor: pointer;
-    margin: 0 10px 0;
+    margin: 0 0 10px 10px;
     padding: 5px 10px;
     border: 1px solid #666;
 }
