--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -179,7 +179,7 @@ select{width:100%;max-width:100%;min-width:100%;-webkit-appearance:none;appearan
     transform: scale(1);
     -webkit-transition: .4s;
     transition: .4s;
-    /*opacity: .5;*/
+    opacity: .5;
 }
 
 .aktsii-item__title {
@@ -2584,4 +2584,15 @@ input.subscribe-sidebar-item__btn.subscribe-sidebar-item__btn--btn-submit {
 
 .sale_button_view:hover{
     color: #fff;
+}
+
+.news-item__img-wrap:hover .news-item__title h3 {
+    display: none;
+}
+.news-item__img-wrap:hover .news-item__title span {
+    display: none;
+}
+
+.news-item__img-wrap:hover{
+    opacity: 1;
 }
